--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hidden Garden</title>
     <script src="https://kit.fontawesome.com/a0c4fed9cc.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./src/assets/images/logo/logo-nav.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
